[tool.poetry]
name = "zorge"
version = "1.1.1"
description = "Yet another implementation of dependency injection pattern"
repository = "https://github.com/smairon/zorge"
authors = ["Smairon <man@smairon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"